# jiamusic

./: .eslintrc.cjs  .gitignore  LICENSE  PKGBUILD  README.md  cleanup.sh  components.json  desktop.patch  index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
pocketbase/: pb_schema.json
src/: App.tsx  build.ts  index.ts  main.tsx  styles.css  upload-release-assets.ts  upload-version-json.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: jiamusic.desktop
src-tauri/icons/: icon.icns
src-tauri/installer/: en-US.wxl  main.wxs
src-tauri/src/: main.rs
src/components/: Layout.tsx  MusicCard.tsx  Navbar.tsx  Player.tsx  Sidebar.tsx  SongCard.tsx  SongList.tsx
src/components/Titlebar/: AboutDialog.tsx  Menu.tsx  Titlebar.tsx  TitlebarButton.tsx
src/components/ui/: Card.tsx  Dialog.tsx  Input.tsx  Menubar.tsx  Slider.tsx  Table.tsx  Toast.tsx
src/contexts/: CurrentSongContext.tsx  PlayerContext.tsx  PocketBaseContext.tsx  SongListContext.tsx  SongsContext.tsx  StoreContext.tsx
src/hooks/: useStore.ts  useToast.ts
src/lib/: Providers.tsx  utils.ts
src/pages/: Home.tsx  Search.tsx
src/types/: song.d.ts
src/utils/: fancyTimeFormat.ts  stringToBoolean.ts
